--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
+title: Tailored Clean Software  
+subtitle: Blog on Bespoke Software Craftpersonship
+email: lukepunnett@protonmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: lukepunnett.github.io
 author:
 street_address: 1234 Somewhere Road
 city: Nashville
