--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Tailored Clean Software  
 subtitle: Blog on Bespoke Software Craftpersonship
 email: lukepunnett@protonmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: A blog on Software Engineering & Craftsmanship
 baseurl: "" # the subpath of your site, e.g. /blog
 url: lukepunnett.github.io
 author:
